--- a/src/web/NSE.WebApp.MVC/Views/Identity/Login.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Identity/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model NSE.WebApp.MVC.Models.LoginUser
+﻿@model NSE.WebApp.MVC.Models.UsuarioLogin
 
 @{
     ViewData["Title"] = "Log in";
@@ -9,9 +9,9 @@
     <div class="col-md-12">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Welcome and good shopping!</h4>
+                <h4>Seja bem vindo e boas compras</h4>
                 <hr />
-
+                
                 <vc:Summary></vc:Summary>
 
                 <div class="form-group">
@@ -20,16 +20,16 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Password"></label>
-                    <input type="password" asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
+                    <label asp-for="Senha"></label>
+                    <input type="password" asp-for="Senha" class="form-control" />
+                    <span asp-validation-for="Senha" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <button type="submit" class="btn btn-primary">Entrar</button>
                 </div>
                 <div class="form-group">
                     <p>
-                        <a asp-action="Register" asp-controller="IdentityController">Create a new Account</a>
+                        <a asp-action="Registro" asp-controller="Identidade">Criar uma conta</a>
                     </p>
                 </div>
             </form>
@@ -38,5 +38,5 @@
 </div>
 
 @section Scripts {
-<partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial" />
 }
