--- a/src/web/NSE.WebApp.MVC/Views/Identity/Register.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Identity/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model NSE.WebApp.MVC.Models.RegisterUser
+﻿@model NSE.WebApp.MVC.Models.UsuarioRegistro
 
 @{
     ViewData["Title"] = "Registro";
@@ -9,9 +9,9 @@
     <div class="col-md-12">
         <section>
             <form method="post">
-                <h4>Create a new account and start buying today!</h4>
+                <h4>Registre-se e comece a comprar hoje mesmo</h4>
                 <hr />
-
+                
                 <vc:Summary></vc:Summary>
 
                 <div class="form-group">
@@ -20,19 +20,19 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Password"></label>
-                    <input type="password" asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
+                    <label asp-for="Senha"></label>
+                    <input type="password" asp-for="Senha" class="form-control" />
+                    <span asp-validation-for="Senha" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="PasswordConfirmation"></label>
-                    <input type="password" asp-for="PasswordConfirmation" class="form-control" />
-                    <span asp-validation-for="PasswordConfirmation" class="text-danger"></span>
+                    <label asp-for="SenhaConfirmacao"></label>
+                    <input type="password" asp-for="SenhaConfirmacao" class="form-control" />
+                    <span asp-validation-for="SenhaConfirmacao" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Send</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
                 </div>
             </form>
         </section>
@@ -40,5 +40,5 @@
 </div>
 
 @section Scripts {
-<partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial" />
 }
