--- a/src/web/NSE.WebApp.MVC/Views/Identity/Register.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Identity/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model NSE.WebApp.MVC.Models.UsuarioRegistro
+﻿@model NSE.WebApp.MVC.Models.RegisterUser
 
 @{
     ViewData["Title"] = "Registro";
@@ -20,15 +20,15 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Senha"></label>
-                    <input type="password" asp-for="Senha" class="form-control" />
-                    <span asp-validation-for="Senha" class="text-danger"></span>
+                    <label asp-for="Password"></label>
+                    <input type="password" asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="SenhaConfirmacao"></label>
-                    <input type="password" asp-for="SenhaConfirmacao" class="form-control" />
-                    <span asp-validation-for="SenhaConfirmacao" class="text-danger"></span>
+                    <label asp-for="PasswordConfirmation"></label>
+                    <input type="password" asp-for="PasswordConfirmation" class="form-control" />
+                    <span asp-validation-for="PasswordConfirmation" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
